vac-rs/crates/surfaces/tui/src/status/snapshots/vac_tui__status__tests__status_snapshot_cached_limits_hide_credits_without_flag.snap
---
source: crates/surfaces/tui/src/status/tests.rs
assertion_line: 1588
expression: sanitized
---
/status

╭──────────────────────────────────────────────────────────────────────────────╮
│  >_ Vastar VAC (v0.0.0)                                                      │
│                                                                              │
│  Model:             gpt-5.1-vac (reasoning none, summaries auto)             │
│  Model provider:    Vastar (vastar, responses)                               │
│  Model providers:   4 registered; active=*vastar; amazon-bedrock:Amazon Bedr │
│  Directory: [[workspace]]                                                    │
│  Permissions:       Custom (workspace with network access, on-request)       │
│  Agents.md:         <none>                                                   │
│                                                                              │
│  Token usage:       1.05K total  (700 input + 350 output)                    │
│  Context window:    100% left (1.45K used / 272K)                            │
╰──────────────────────────────────────────────────────────────────────────────╯
