vac-rs/crates/surfaces/tui/src/status/snapshots/vac_tui__status__tests__status_snapshot_includes_credits_and_limits.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭───────────────────────────────────────────────────────────────────────╮
│  >_ Vastar VAC (v0.0.0)                                               │
│                                                                       │
│                                                                       │
│  Model:            gpt-5.1-vac (reasoning none, summaries auto)       │
│  Directory: [[workspace]]                                             │
│  Permissions:      Custom (workspace with network access, on-request) │
│  Agents.md:        <none>                                             │
│                                                                       │
│  Token usage:      2K total  (1.4K input + 600 output)                │
│  Context window:   100% left (2.2K used / 272K)                       │
╰───────────────────────────────────────────────────────────────────────╯
