vac-rs/crates/surfaces/tui/src/status/snapshots/vac_tui__status__tests__status_snapshot_includes_monthly_limit.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────────────────────────╮
│  >_ Vastar VAC (v0.0.0)                                                    │
│                                                                            │
│                                                                            │
│  Model:            gpt-5.1-vac-max (reasoning none, summaries auto)        │
│  Directory: [[workspace]]                                                  │
│  Permissions:      Custom (workspace with network access, on-request)      │
│  Agents.md:        <none>                                                  │
│                                                                            │
│  Token usage:      1.2K total  (800 input + 400 output)                    │
│  Context window:   100% left (1.2K used / 272K)                            │
╰────────────────────────────────────────────────────────────────────────────╯
