vac-rs/crates/surfaces/tui/src/status/snapshots/vac_tui__status__tests__status_snapshot_includes_reasoning_details.snap
---
source: crates/surfaces/tui/src/status/tests.rs
assertion_line: 262
expression: sanitized
---
/status

╭──────────────────────────────────────────────────────────────────────────────╮
│  >_ Vastar VAC (v0.0.0)                                                      │
│                                                                              │
│  Model:             gpt-5.1-vac-max (reasoning high, summaries detailed)     │
│  Model provider:    Vastar (vastar, responses)                               │
│  Model providers:   4 registered; active=*vastar; amazon-bedrock:Amazon Bedr │
│  Directory: [[workspace]]                                                    │
│  Permissions:       Workspace (on-request)                                   │
│  Agents.md:         <none>                                                   │
│                                                                              │
│  Token usage:       1.9K total  (1K input + 900 output)                      │
│  Context window:    100% left (2.25K used / 272K)                            │
╰──────────────────────────────────────────────────────────────────────────────╯
