vac-rs/crates/surfaces/tui/src/status/snapshots/vac_tui__status__tests__status_snapshot_shows_auto_review_permissions.snap
---
source: crates/surfaces/tui/src/status/tests.rs
assertion_line: 619
expression: sanitized
---
/status

╭──────────────────────────────────────────────────────────────────────────────╮
│  >_ Vastar VAC (v0.0.0)                                                      │
│                                                                              │
│  Model:             gpt-5.1-vac-max (reasoning none, summaries auto)         │
│  Model provider:    Vastar (vastar, responses)                               │
│  Model providers:   4 registered; active=*vastar; amazon-bedrock:Amazon Bedr │
│  Directory: [[workspace]]                                                    │
│  Permissions:       Workspace (auto-review)                                  │
│  Agents.md:         <none>                                                   │
│                                                                              │
│  Token usage:       0 total  (0 input + 0 output)                            │
│  Context window:    100% left (0 used / 272K)                                │
╰──────────────────────────────────────────────────────────────────────────────╯
