vac-rs/crates/surfaces/tui/src/status/snapshots/vac_tui__status__tests__status_snapshot_treats_refreshing_empty_limits_as_unavailable.snap
---
source: crates/surfaces/tui/src/status/tests.rs
assertion_line: 1450
expression: sanitized
---
/status

╭──────────────────────────────────────────────────────────────────────────────╮
│  >_ Vastar VAC (v0.0.0)                                                      │
│                                                                              │
│  Model:             gpt-5.1-vac-max (reasoning none, summaries auto)         │
│  Model provider:    Vastar (vastar, responses)                               │
│  Model providers:   4 registered; active=*vastar; amazon-bedrock:Amazon Bedr │
│  Directory: [[workspace]]                                                    │
│  Permissions:       Custom (workspace with network access, on-request)       │
│  Agents.md:         <none>                                                   │
│                                                                              │
│  Token usage:       750 total  (500 input + 250 output)                      │
│  Context window:    100% left (750 used / 272K)                              │
╰──────────────────────────────────────────────────────────────────────────────╯
